[tool.poetry]
name = "vulnerable-test-app"
version = "0.1.0"
description = "A sample application with known vulnerabilities for testing"
authors = ["Test User <test@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
cryptography = "42.0.2"
django = "5.2.8"
flask = "2.3.2"
jinja2 = "3.1.6"
pillow = "10.3.0"
python = "^3.9"
pyyaml = "5.4"
requests = "2.32.4"
urllib3 = "2.6.3"
# Vulnerable versions intentionally specified

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"